--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,2 +1,27 @@
+checks:
+    php:
+        code_rating: true
+        duplication: true
+
+filter:
+    excluded_paths:
+        - tests/*
+
 tools:
     external_code_coverage: true
+
+    php_mess_detector: true
+    sensiolabs_security_checker: true
+    php_code_coverage: true
+    php_pdepend: true
+    php_loc:
+        enabled: true
+        excluded_dirs: [vendor, tests]
+    php_cpd:
+        enabled: true
+        excluded_dirs: [vendor, tests]
+    php_code_sniffer:
+        enabled: true
+        config:
+            standard: "PSR2"
+
