--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "phpexiftool/phpexiftool": "~0.4",
+        "alchemy/phpexiftool": "~0.4",
         "php-ffmpeg/php-ffmpeg": "~0.5",
         "php-poppler/php-poppler": "~1.0",
         "temp/image-analyzer": "~1.0"
