--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
         }
     },
     "require": {
-        "php": ">=5.3.0",
-        "psr/log": "~1.0.0"
+        "php": "~7.0",
+        "psr/log": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5",
-        "alchemy/phpexiftool": "~0.4",
-        "php-ffmpeg/php-ffmpeg": "~0.5",
-        "php-poppler/php-poppler": "~1.0",
-        "temp/image-analyzer": "~1.0"
+        "phpunit/phpunit": "^5.0",
+        "alchemy/phpexiftool": "^0.4",
+        "php-ffmpeg/php-ffmpeg": "^0.5",
+        "php-poppler/php-poppler": "^1.0",
+        "temp/image-analyzer": "^1.0"
     },
     "suggest": {
         "alchemy/phpexiftool": "If you want to use the exif tool reader.",
